# agentle

./: .gitattributes  README.md  TODO  examples.ipynb  generate_test_structure.py  index.html  profile.html  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  post-create.sh
.github/workflows/: sphinx.yaml
agentle/agents/: __init__.py  agent.py  agent_input.py  agent_output.py  agent_pipeline.py  agent_protocol.py  agent_run_output.py  agent_team.py  context.py  runnable.py  step.py
agentle/generations/: json.py  tracing.py  types.py
agentle/memory/: mem0_memory_store.py  memory_store.py
agentle/parsing/: __init__.py  compressed.py  document_parser.py  facade.py  image.py  migrate.py  parse.py  parsed_document.py  parses.py  section_content.py  xml.py
agentle/session/: __init__.py  in_memory_session_store.py  redis_session_store.py  session_manager.py  session_store.py
docker/: compose.yaml
docs/: 404.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  whatsapp_integration.md
docs/api/: mcp.html  (+8 more)
examples/: a2a_interface.py  a2a_simple_task.py  a2a_task_cancellation.py  a2a_task_cancellation_sync.py  agent_pipeline.py  agent_team.py  agent_with_cache.py  agent_with_knowledge.py  blacksheep_api.py  function_calling.py  mcp_servers_example.py  mcp_servers_http.py  open_memory.py  providers.py  siga.py  streamlit_ui.py  structured_outputs.py  text_outputs.py  tool_calling_and_structured_outputs.py  whatsapp_bot_example.py
(+127 files in other folders)
